# canvas-rs

./: .gitignore  Cargo.toml  README.md
canvas-api/: Cargo.toml
canvas-api/src/: courses.rs  lib.rs  test.rs
