[package]
name = "canvas-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11" , features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap = "4.0.29"
log = "0.4.14"
dotenv = "0.15.0"
simplelog = "0.12.0"